k8s/ilpost-scraper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: scraper
    group: ilpostscraper
  name: ilpostscraper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scraper
      group: ilpostscraper
  strategy: {}
  template:
    metadata:
      labels:
        app: scraper
        group: ilpostscraper
    spec:
      containers:
        - envFrom:
          - secretRef:
              name: env
          image: ilpostscraper:latest
          command: ["uvicorn", "ilpostscraper:app", "--reload" ,"--proxy-headers", "--port", "5000", "--host", "0.0.0.0"]
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://127.0.0.1:5000/ping
            failureThreshold: 12
            periodSeconds: 5
            timeoutSeconds: 5
          name: ilpostscraper
          ports:
            - containerPort: 5000
      restartPolicy: Always
