k8s/selenium-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    app: selenium
    group: ilpostscraper
  name: selenium
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selenium
      group: ilpostscraper
  strategy: {}
  template:
    metadata:
      labels:
        group: ilpostscraper
        app: selenium
    spec:
      containers:
        - envFrom:
          - secretRef:
              name: env
          image: selenium/standalone-chrome:112.0
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:4444/wd/hub/status
            failureThreshold: 12
            periodSeconds: 5
            timeoutSeconds: 5
          name: selenium
          ports:
            - containerPort: 4444
      restartPolicy: Always
