k8s/ilpost-scraper-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: scraper
    group: ilpostscraper
  name: scraper
spec:
  ports:
    - name: web
      port: 5000
      targetPort: 5000
  selector:
    app: scraper
    group: ilpostscraper
