k8s/selenium-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: selenium
    group: ilpostscraper
  name: selenium
spec:
  ports:
    - name: "4444"
      port: 4444
      targetPort: 4444
  selector:
    app: selenium
    group: ilpostscraper
