k8s/ilpost-scraper-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: scraper-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              group: ilpostscraper
  podSelector:
    matchLabels:
      group: ilpostscraper
